# open-pdf-studio-v3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml  build.rs
crates/app/icons/: icon.icns
crates/app/src/: bridge.rs  docs.rs  main.rs  settings.rs
crates/app/ui/: app.slint  backstage.slint  components.slint  preferences.slint  ribbon.slint
crates/pdf-engine/: Cargo.toml
crates/pdf-engine/src/: lib.rs  library.rs  render.rs  types.rs  worker.rs
