[package]
name = "open-pdf-studio3"
version = "0.1.0"
edition = "2024"
description = "Open PDF Studio — Slint front-end for the pdf-engine core"

[dependencies]
slint = { workspace = true }
rfd = { workspace = true }
pdf-engine = { path = "../pdf-engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
directories = "6.0.0"

[build-dependencies]
slint-build = { workspace = true }

# Installer/bundle configuration for `cargo packager`.
# CI fetches the per-platform PDFium into `pdfium-lib/` (see release workflow),
# which is bundled as a resource; `locate_pdfium` finds it at runtime.
[package.metadata.packager]
product-name = "Open PDF Studio"
identifier = "org.openaec.open-pdf-studio"
description = "A fast, native PDF viewer (Slint + PDFium)"
authors = ["OpenAEC Foundation"]
before-packaging-command = "cargo build --release -p open-pdf-studio3"
resources = ["pdfium-lib"]
# Formats are chosen per-OS on the CLI in the release workflow (a single
# manifest list would make each runner try to build foreign formats).
