[package]
name = "open-pdf-studio3"
version = "0.1.0"
edition = "2024"
description = "Open PDF Studio — Slint front-end for the pdf-engine core"

[dependencies]
slint = { workspace = true }
rfd = { workspace = true }
pdf-engine = { path = "../pdf-engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
directories = "6.0.0"

[build-dependencies]
slint-build = { workspace = true }

# Installer/bundle configuration for `cargo packager`.
# CI fetches the per-platform PDFium into `pdfium-lib/` (see release workflow),
# which is bundled as a resource; `locate_pdfium` finds it at runtime.
[package.metadata.packager]
product-name = "Open PDF Studio"
identifier = "org.openaec.open-pdf-studio"
description = "A fast, native PDF viewer (Slint + PDFium)"
authors = ["OpenAEC Foundation"]
resources = ["pdfium-lib"]
# App icon set: cargo-packager picks .ico (Windows), .icns (macOS), PNGs (Linux).
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
# The release binary is built by an explicit `cargo build --release` step in
# the workflow (not `before-packaging-command`) so the Windows .exe can be
# code-signed *before* cargo-packager bundles it into the installer.
# Formats are chosen per-OS on the CLI in the release workflow (a single
# manifest list would make each runner try to build foreign formats).
