[package]
name = "open-pdf-studio3"
version = "0.1.0"
edition = "2024"
description = "Open PDF Studio — Slint front-end for the pdf-engine core"

[dependencies]
slint = { workspace = true }
rfd = { workspace = true }
pdf-engine = { path = "../pdf-engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
directories = "6.0.0"

[build-dependencies]
slint-build = { workspace = true }

# Embeds the app icon into the Windows .exe as a PE resource (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Installer/bundle configuration for `cargo packager`.
# CI fetches the per-platform PDFium into `pdfium-lib/` (see release workflow),
# which is bundled as a resource; `locate_pdfium` finds it at runtime.
[package.metadata.packager]
product-name = "Open PDF Studio"
identifier = "org.openaec.open-pdf-studio"
description = "A fast, native PDF viewer (Slint + PDFium)"
authors = ["OpenAEC Foundation"]
resources = ["pdfium-lib"]
# App icon set: cargo-packager picks .ico (Windows), .icns (macOS), PNGs (Linux).
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
# The release binary is built by an explicit `cargo build --release` step in
# the workflow (not `before-packaging-command`) so the Windows .exe can be
# code-signed *before* cargo-packager bundles it into the installer.
# Formats are chosen per-OS on the CLI in the release workflow (a single
# manifest list would make each runner try to build foreign formats).

# Register the app as a handler for .pdf files. On Windows (NSIS) this adds the
# registry entries so the app appears under "Open with"; on Linux the .desktop
# file gets the MIME type; on macOS it becomes a document type. The app opens a
# file path passed on the command line (see main.rs).
[[package.metadata.packager.file-associations]]
extensions = ["pdf"]
mime-type = "application/pdf"
description = "PDF Document"
name = "PDF Document"

# NSIS (Windows installer) specifics. The top-level `icons` set the installed
# app icon, but the setup.exe's own icon must be set here or NSIS uses a
# generic default.
[package.metadata.packager.nsis]
installer-icon = "icons/icon.ico"
# Register a friendly display name so Windows' "Open with" shows "Open PDF
# Studio" rather than the exe filename (more reliable than FileDescription alone,
# and survives the shell's name cache). SHCTX = HKLM or HKCU per install mode.
preinstall-section = '''
Section PreInstall
  WriteRegStr SHCTX "Software\Classes\Applications\open-pdf-studio3.exe" "FriendlyAppName" "Open PDF Studio"
SectionEnd
'''
